--- a/package.json
+++ b/package.json
@@ -1,26 +1,46 @@
 {
-  "name": "Basics",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "@haloui/test-form-core",
+  "version": "1.1.2",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:tsc": "tsc -w",
-    "start:rollup": "rollup -c -w"
+    "start:rollup": "rollup -c -w",
+    "build": "rollup -c"
+  },
+  "peerDependencies": {
+    "react": ">=16.0"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Haloui adnane",
+  "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rollup": "^2.60.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup": "^2.60.1",
+    "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-url": "^3.0.1"
-  }
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Adnane-Haloui/-haloui-form-core.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Adnane-Haloui/-haloui-form-core/issues"
+  },
+  "homepage": "https://github.com/Adnane-Haloui/-haloui-form-core#readme",
+  "description": ""
 }
