--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@haloui/test-form-core",
-  "version": "1.1.2",
+  "version": "1.1.17",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
@@ -20,6 +20,8 @@
   "author": "Haloui adnane",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
@@ -32,7 +34,8 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "@babel/plugin-transform-runtime": "^7.16.4"
   },
   "repository": {
     "type": "git",
